--- a/1/1_WebGLPrint.html
+++ b/1/1_WebGLPrint.html
@@ -5,19 +5,21 @@
 <!--键盘、鼠标、菜单、按钮、滑动条-->
 <!--正方形边框 下拉选单改变颜色-->
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>Use keyboard and mouse to change the shape</title>
     <style type="text/css">
-        .container{
-            margin:0 auto;
-            width:800px;
+        .container {
+            margin: 0 auto;
+            width: 800px;
         }
-        .control{
-            margin:0 auto;
-            width:800px;
+
+        .control {
+            margin: 0 auto;
+            width: 800px;
         }
-        #scene{
-            border:1px solid white;
+
+        #scene {
+            border: 1px solid white;
         }
     </style>
 </head>
@@ -30,26 +32,26 @@
     </canvas>
 </div>
 
-<div class = "control">
+<div class="control">
     <p>
         放缩：
-        <input id = "size" type = "range"
-                 min = "0" max = "100" step = "10" value = "50"/>
+        <input id="size" type="range"
+               min="0" max="100" step="10" value="50"/>
         旋转：
-        <input id = "rotation" type = "range"
-               min = "0" max = "360" step = "10" value = "0"/>
+        <input id="rotation" type="range"
+               min="0" max="360" step="10" value="180"/>
     </p>
     <p>
         移动：
         x:
-        <button id="left"> < </button>
-        <input id = "move_x" type = "range"
-               min = "0" max = "100" step = "10" value = "50"/>
-        <button id="right"> > </button>
+        <button id="left"> <</button>
+        <input id="move_x" type="range"
+               min="0" max="100" step="10" value="50"/>
+        <button id="right"> ></button>
         y:
         <button id="down">v</button>
-        <input id = "move_y" type = "range"
-               min = "0" max = "100" step = "10" value = "50"/>
+        <input id="move_y" type="range"
+               min="0" max="100" step="10" value="50"/>
         <button id="up">^</button>
     </p>
     <p>
@@ -71,5 +73,6 @@
 <script src="../lib/webgl-debug.js"></script>
 <script src="../lib/cuon-utils.js"></script>
 <script src="1_WebGLPrint.js"></script>
+<script src="../lib/cuon-matrix.js"></script>
 </body>
 </html>
